Fixed z-index issue with portals

--- a/src/components/InactivityTracker/InactivityTracker.scss
+++ b/src/components/InactivityTracker/InactivityTracker.scss
@@ -32,3 +32,8 @@ h1 {
 .timer-wrapper {
   justify-content: center;
 }
+
+.modal-back {
+  z-index: 600;
+  position: fixed;
+}
